--- a/styles.css
+++ b/styles.css
@@ -7,6 +7,7 @@ body {
   overflow: hidden;
   position: relative;
   text-align: center;
+  touch-action: none;
 }
 
 canvas {
@@ -15,12 +16,5 @@ canvas {
   left: 50%;
   top: 50%;
   transform: translate(-50%, -50%);
-}
-.text {
-  color: white;
-  text-align: center;
-  position: absolute;
-  top: 20%;
-  left: 50%;
-  transform: translate(-50%, -50%);
+  touch-action: none;
 }
